src/objects/Glxy_Associated_Lease_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>AssociatedLeaseTxnId__c</fullName>
        <externalId>true</externalId>
        <label>AssociatedLeaseTxnId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Construct_Prospectus_Number__c</fullName>
        <formula>Lease__r.ConstructProspectusNO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Construct Prospectus Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegated_Flag__c</fullName>
        <formula>IF( Lease__r.DelegatedLease__c =TRUE, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegated Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Galaxy_Transaction__c</fullName>
        <label>Galaxy Transaction</label>
        <referenceTo>Glxy_Transaction__c</referenceTo>
        <relationshipLabel>Associated Leases Transaction</relationshipLabel>
        <relationshipName>Associated_Leases_Transaction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lease_Expiration__c</fullName>
        <formula>Lease__r.ExpirationDateofLease__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Status__c</fullName>
        <formula>TEXT(Lease__r.StatusCode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease</label>
        <referenceTo>Glxy_Lease__c</referenceTo>
        <relationshipLabel>Associated Leases Transaction</relationshipLabel>
        <relationshipName>Associated_Leases_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TerminationDate__c</fullName>
        <description>Galaxy Release 1.1</description>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <label>Associated Lease Transaction</label>
    <nameField>
        <displayFormat>ALT-{000000}</displayFormat>
        <label>Associated Lease Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Leases Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>